--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 PROJECT_NAME="Change Me"
-TAG_LINE="Change Me"
-BITBUCKET_REPO_NAME="Repository_Folder_Name"
+BITBUCKET_REPO_URL="https://agile.act.org/bitbucket/projects/your_project/repos/your-repo-name/"
 PIPELINE_FOLDER_NAME="Pipeline_Folder_Name"
