--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@actinc/docusaurus-plugin-panzoom": "^1.0.1",
     "@docusaurus/core": "^2.3.1",
     "@docusaurus/preset-classic": "^2.3.1",
     "@mdx-js/react": "^1.6.22",
@@ -29,9 +30,10 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.3.1",
+    "@docusaurus/theme-mermaid": "^2.3.1",
     "@tsconfig/docusaurus": "^1.0.6",
-    "typescript": "^4.9.5",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "typescript": "^4.9.5"
   },
   "browserslist": {
     "production": [
