--- a/package.json
+++ b/package.json
@@ -6,34 +6,13 @@
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
-    "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
-    "clear": "docusaurus clear",
-    "serve": "docusaurus serve",
-    "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "serve": "docusaurus serve"
   },
   "dependencies": {
-    "@actinc/docusaurus-plugin-panzoom": "^1.0.1",
-    "@docusaurus/core": "^2.3.1",
-    "@docusaurus/preset-classic": "^2.3.1",
-    "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.2.1",
-    "hast-util-is-element": "^2.1.3",
-    "mdx-mermaid": "^1.3.2",
-    "prism-react-renderer": "^1.3.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "rehype-katex": "^6.0.2",
-    "remark-math": "^3.0.1"
+    "@actinc/docusaurus-base": "*"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.3.1",
-    "@docusaurus/theme-mermaid": "^2.3.1",
-    "@tsconfig/docusaurus": "^1.0.6",
-    "dotenv": "^16.0.3",
-    "typescript": "^4.9.5"
+
   },
   "browserslist": {
     "production": [
